--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             transition: all 0.3s ease;
         }
         #intro-card {
-            text-align: center;
+            text-align: left;
         }
         #question-container,
         #result-container {
