added vercel analytics

--- a/index.html
+++ b/index.html
@@ -393,6 +393,12 @@
     </style>
 </head>
 <body>
+    
+    <script>
+        window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+      </script>
+      <script defer src="/_vercel/insights/script.js"></script>
+
     <div class="container">
         <h1>Selvevaluering - Digital Modenhet</h1>
         
