--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Utforsk verktøyene</a>
       </div>
       <div class="w-full lg:max-w-md" data-aos="fade-left">
-        <img src="https://cdni.iconscout.com/illustration/premium/thumb/data-analytics-dashboard-7308316-5954646.png" alt="Illustrasjon av dashboard" class="w-full rounded-xl shadow-xl" />
+        <img src="dmsa-demo.gif" alt="Illustrasjon av dashboard" class="w-full rounded-xl shadow-xl" />
       </div>
     </div>
   </header>
