--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header class="bg-white/80 backdrop-blur border-b border-gray-200 py-12 px-4 shadow-md">
     <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center justify-between gap-10">
       <div class="text-center lg:text-left max-w-xl" data-aos="fade-right">
-        <h1 class="text-4xl font-bold text-gray-900">Verktøykassa for Digital Modenhet</h1>
+        <h1 class="text-4xl font-bold text-gray-900">Verktøykassa for Digitalisering</h1>
         <p class="mt-4 text-lg text-gray-600">Et ærlig startpunkt for virksomheter som ikke er klare for kunstig intelligens – enda.</p>
-        <a href="#" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Utforsk verktøyene</a>
+        <a href="https://wwww.linkedin.com/in/hassanzouhar" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Ta kontakt</a>
       </div>
       <div class="w-full lg:max-w-md" data-aos="fade-left">
         <img src="dmsa-demo.gif" alt="Illustrasjon av dashboard" class="w-full rounded-xl shadow-xl" />
@@ -33,7 +33,7 @@
           <h3 class="text-2xl font-semibold text-gray-900 mb-3">Ta testen</h3>
           <p class="text-gray-600">Vurder bedriftens digitale kapasitet på 5 nøkkelområder. Umiddelbar visualisering og anbefalinger.</p>
         </div>
-        <a href="index.html" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Start vurdering</a>
+        <a href="index2.html" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Åpne verktøyet</a>
       </div>
 
       <div class="rounded-3xl bg-white/90 backdrop-blur shadow-xl p-8 transform transition-all duration-300 hover:-translate-y-1 hover:shadow-2xl" data-aos="fade-up" data-aos-delay="100">
