--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <header class="bg-white/80 backdrop-blur border-b border-gray-200 py-12 px-4 shadow-md">
     <div class="max-w-7xl mx-auto flex flex-col lg:flex-row items-center justify-between gap-10">
       <div class="text-center lg:text-left max-w-xl" data-aos="fade-right">
-        <h1 class="text-4xl font-bold text-gray-900">Verktøykassa for Digitalisering</h1>
-        <p class="mt-4 text-lg text-gray-600">Et ærlig startpunkt for virksomheter som ikke er klare for kunstig intelligens – enda.</p>
-        <a href="https://wwww.linkedin.com/in/hassanzouhar" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Ta kontakt</a>
+        <h1 class="text-4xl font-bold text-gray-900">Verktøy for Digitalisering</h1>
+        <p class="mt-4 text-lg text-gray-600">Kunstig Intelligens, KI, er ikke første stopp i en digitaliseringsreise. Få hjelp til å finne riktig startpunkt og bli en tryggere bestiller i samme slengen.  </p>
+        <a href="https://www.linkedin.com/in/hassanzouhar" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Ta kontakt</a>
       </div>
       <div class="w-full lg:max-w-md" data-aos="fade-left">
         <img src="dmsa-demo.gif" alt="Illustrasjon av dashboard" class="w-full rounded-xl shadow-xl" />
@@ -30,8 +30,8 @@
           <div class="mb-5 text-blue-600">
             <i data-lucide="check-circle" class="w-8 h-8"></i>
           </div>
-          <h3 class="text-2xl font-semibold text-gray-900 mb-3">Ta testen</h3>
-          <p class="text-gray-600">Vurder bedriftens digitale kapasitet på 5 nøkkelområder. Umiddelbar visualisering og anbefalinger.</p>
+          <h3 class="text-2xl font-semibold text-gray-900 mb-3">Et klart svar</h3>
+          <p class="text-gray-600">Vurder bedriftens digitale modenhet og kapasitet på 5 nøkkelområder. I løpet av minutter får du en enkel, faktabasert vudering, sammen med visualiseringer og anbefalinger for steg videre..</p>
         </div>
         <a href="index2.html" class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm font-medium px-5 py-3 rounded-xl">Åpne verktøyet</a>
       </div>
@@ -57,7 +57,7 @@
   </main>
 
   <footer class="text-center text-sm text-gray-500 py-12">
-    © 2025 Digital Modenhet – kuratert av Hassan Zouhar
+    © 2025 Laget med ❤️ av <a href="https://www.linkedin.com/in/hassanzouhar" class="text-blue-600 hover:underline">Hassan Zouhar</a>. Alle rettigheter reservert.
   </footer>
 
   <script>
