--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="/api/og?title=Selvevaluering" />
     <title>Selvevaluering - Digital Modenhet</title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Link til den eksterne CSS-filen -->
