Add engaging landing page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
         window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
     </script>
     <script defer src="/_vercel/insights/script.js"></script>
+
+    <header class="hero">
+        <h1>Digital Modenhet</h1>
+        <p>Få et raskt overblikk over hvor digitalt moden virksomheten din er.</p>
+        <button id="hero-start-btn" class="btn btn-primary hero-btn">Kom i gang</button>
+    </header>
+
+    <section class="features">
+        <h2>Hvorfor ta testen?</h2>
+        <ul>
+            <li><strong>Raskt</strong> – kun noen få minutters innsats.</li>
+            <li><strong>Innsiktsfullt</strong> – identifiser styrker og forbedringsområder.</li>
+            <li><strong>Kostnadsfritt</strong> – verktøyet er helt gratis.</li>
+        </ul>
+    </section>
+
     <div class="container">
         <h1>Selvevaluering - Digital Modenhet</h1>
 
